fixing button spacing issues in the settings menu

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -131,6 +131,7 @@ body {
 #innerSectionDiv {
 	display:none;
     width: 30%;
+	margin-bottom:90px;
 	margin-left:auto;
 	margin-right:auto;
     text-align: center;
@@ -171,7 +172,7 @@ body {
 #tableGridDiv {
 	margin-left:auto;
 	margin-right:auto;
-	margin-top:100px;
+	margin-top:10px;
     width: 50%;
 }
 
@@ -283,7 +284,7 @@ select {
 	margin-top:40px;
 	margin-left:auto;
 	margin-right:auto;
-	width:20%;
+	width:100%;
 }
 
 #reset-seat-button, #confirm-seat-button {
